Updating documentation : updating configuration page and fix on css for mobicents.org
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@1517 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/mobicents-skin/src/main/resources/mobicents-style.css
+++ b/mobicents-skin/src/main/resources/mobicents-style.css
@@ -185,6 +185,10 @@ input.login {
 	margin: 0 0 10px 0;
 }
 
+.left tt {	
+	font-size : 11px;
+}
+
 .left h3 {
 	clear: both;
 	background: #A9C0CE url(corner.gif) no-repeat top right;
