Committing new version of mobicents-skin plugin to map to new css and site on mobicents.org looking more like jboss.org
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@1776 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/mobicents-skin/src/main/resources/META-INF/maven/site.vm
+++ b/mobicents-skin/src/main/resources/META-INF/maven/site.vm
@@ -290,7 +290,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>$title</title>
-    <link rel="stylesheet" href="$relativePath/mobicents-style.css" type="text/css">
+    <link rel="stylesheet" href="$relativePath/maven-mobicents-style.css" type="text/css">
     <meta name="author" content="Luka Cvrk (www.solucija.com)">
     #foreach( $author in $authors )
       <meta name="author" content="$author" />
@@ -346,10 +346,9 @@ Search
 <div class="top_info_left">The Open Source SLEE and SIP Server</div>
 </div>
 
-<div class="logo">
+<div id="logo">
 <h1><a href="http://www.mobicents.org-a.googlepages.com/"
-	title="Mobicents"><span class="dark">Mobi</span>Cents</a></h1>
-
+	title="Mobicents">Mobicents</a></h1>
 </div>
 </div>
 
@@ -368,25 +367,29 @@ Search
 
 </ul>
 </div>
-<div class="left">
-<h3>Mobicents Sip Servlets</h3>
+<div class="contentwrapper"><div class="left">
+<h3 id="h3_2">$decoration.name</h3>
 $bodyContent
 </div>
 
 <div class="right">
-<h3>Mobicents Sip Servlets</h3>
+<h3>$decoration.name</h3>
 <div class="right_articles">
 #mainMenu( $decoration.body.menus )
 </div>
 </div>
-
-<div class="footer">
-<p>
-<a href="https://mobicents.dev.java.net/servlets/ProjectNewsRSS">RSS Feed</a> | <a href="mailto:telco@redhat.com">Contact</a> | <a href="#">Products</a> | <a href="#">Disclaimer</a> | <a href="#">Privacy</a> 
-<br> 
-Ã‚Â&#169; Copyright 2006 Mobicents, web design: 
-<a href="http://www.solucija.com/">Solucija</a></p>
 </div>
+<div class="footer">
+    <p><a href="https://mobicents.dev.java.net/servlets/ProjectNewsRSS">RSS Feed</a> | <a href="mailto:telco@redhat.com">Contact</a> | <a href="#">Products</a> | <a href="#">Disclaimer</a> | <a href="#">Privacy</a> <br />
+
+    </p>
+  </div>
+  <div id="footer">
+    <div>
+      <div align="center"><a href="http://www.redhat.com/"><img src="logo_rh_home.png" alt=" Red Hat" border="0" height="31" width="96" /></a><br />
+      </div>
+    </div>
+    <div align="center">&copy; 2008 Red Hat Middleware, LLC. All rights reserved. <a href="http://www.jboss.com/privacy_policy">Privacy Policy</a></div> </div>
 </div>
   </body>
 </html>
