--- a/sip-servlets-seam/ipbx/WebContent/layout/leftpanel.xhtml
+++ b/sip-servlets-seam/ipbx/WebContent/layout/leftpanel.xhtml
@@ -36,11 +36,11 @@
 			<h:inputText value="#{registrationAction.registrationUri}" size="15" />
 
 			<rich:spacer width="15"></rich:spacer>
-			<h:commandLink value="Add phone"
+			<a4j:commandLink value="Add phone"
 				action="#{registrationAction.addRegistration()}"
 				reRender="registration">
 
-			</h:commandLink>
+			</a4j:commandLink>
 		</a4j:form>
 
 	</rich:panel> <a4j:form>
