Polishing a bit the UI, update ant build to Seam 2.1.1.GA, smarter hangup and call
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@4543 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-seam/ipbx/WebContent/layout/menu.xhtml
+++ b/sip-servlets-seam/ipbx/WebContent/layout/menu.xhtml
@@ -11,8 +11,8 @@
         <h:outputText value="Home"/></s:link>
     </rich:toolBarGroup>
     <!-- @newMenuItem@ -->
-    <div class="menubar">
-	<rich:toolBarGroup location="right">
+    
+	<rich:toolBarGroup location="right"><div class="menubar">
 		<h:outputText value="signed in as: #{identity.username}"
 			rendered="#{identity.loggedIn}" />
 		<a4j:form rendered="#{not identity.loggedIn}" >
@@ -38,6 +38,6 @@
 			rendered="#{identity.loggedIn}">
 			<f:param name="userId" 
                                 value="#{user.id}"/>
-			</s:link>
-	</rich:toolBarGroup></div>
+			</s:link></div>
+	</rich:toolBarGroup>
 </rich:toolBar>
