--- a/sip-servlets-seam/ipbx/WebContent/layout/template.xhtml
+++ b/sip-servlets-seam/ipbx/WebContent/layout/template.xhtml
@@ -22,6 +22,7 @@
 -->
 
 <div style="background-color: #000; width: 100%"><h:graphicImage value="/img/mpbx.png"/><br/></div>
+
 <ui:include src="menu.xhtml">
 	<ui:param name="projectName" value="sip-servlets-pbx" />
 </ui:include>
@@ -35,7 +36,9 @@
 		<td width="340">
 		<div class="mainbody" />
 		</td>
-		<td><ui:insert name="body" />
+		<td><h:messages globalOnly="true" styleClass="message"
+        errorClass="errormsg" infoClass="infomsg" warnClass="warnmsg"/>
+		<ui:insert name="body" />
 		<div class="footer">Powered by <a
 			href="http://www.mobicents.org">Mobicents</a> and <a
 			href="http://jboss.com/products/seam">Seam</a>.</div>
