--- a/sip-servlets-seam/ipbx/WebContent/layout/template.xhtml
+++ b/sip-servlets-seam/ipbx/WebContent/layout/template.xhtml
@@ -36,7 +36,7 @@
 		<td width="340">
 		<div class="mainbody" />
 		</td>
-		<td><h:messages globalOnly="true" styleClass="message"
+		<td><h:messages id="messages" globalOnly="true" styleClass="message"
         errorClass="errormsg" infoClass="infomsg" warnClass="warnmsg"/>
 		<ui:insert name="body" />
 		<div class="footer">Powered by <a
