--- a/sip-servlets-seam/ipbx/WebContent/layout/leftpanel.xhtml
+++ b/sip-servlets-seam/ipbx/WebContent/layout/leftpanel.xhtml
@@ -14,7 +14,7 @@
 
 				<rich:column>
 					<f:facet name="header">Phone</f:facet>
-					<h:outputText value="#{registration.uri}" />
+					<h:outputText value="#{registration.uri}" /><a4j:region rendered="#{not empty registration.bindings}"> <span style="color:red"> (#{registration.bindings.size()} bindings)</span></a4j:region>
 				</rich:column>
 				<rich:column width="20">
 					<f:facet name="header">
@@ -31,16 +31,16 @@
 				</f:facet>
 
 			</rich:dataTable>
-			<br />
+			<br/>
 
 			<h:inputText value="#{registrationAction.registrationUri}" size="15" />
 
 			<rich:spacer width="15"></rich:spacer>
 			<a4j:commandLink value="Add phone" id="addPhone"
 				action="#{registrationAction.addRegistration()}"
-				reRender="registration,messages">
+				reRender="registration,messages"> 
 
-			</a4j:commandLink>
+			</a4j:commandLink><rich:spacer width="15"></rich:spacer><a4j:commandLink value="Refresh" reRender="registration"></a4j:commandLink>
 		</a4j:form>
 
 	</rich:panel> <a4j:form>
